--- a/2_network_data.Rmd
+++ b/2_network_data.Rmd
@@ -22,8 +22,7 @@ Take the following network of friendship relations between members of the Swiss 
 myel <- read.csv("bookdown_resources/nati_friends.csv", stringsAsFactors = FALSE, encoding = "UTF-8")
 myel <- myel[myel$Receiver != "Alle",]
 
-## create adjacency matrix
-
+#create adjacency matrix
 unique_names <- unique(c(myel$Sender, myel$Receiver))
 friends_adjmat <- matrix(0, nrow = length(unique_names), ncol = length(unique_names))
 colnames(friends_adjmat) <- unique_names
@@ -163,11 +162,11 @@ If they match, you can proceed. If they don't match, you'll have to sort your da
 
 ```{r, eval=FALSE}
 att <- att[att$nodeID %in% mynodes,]
-## or: 
+#alternative code: 
 att <- att[att$nodeID %in% rownames(mat),]
-## or: 
+#alternative code: 
 att <- att[match(att$nodeID, mynodes),]
-## or: 
+#alternative code: 
 att <- att[match(att$nodeID, rownames(mat)),]
 ```
 
@@ -208,7 +207,7 @@ It can also store your network attributes that you have saved in the `att`-data 
 
 ```{r, eval = FALSE}
 set.vertex.attribute(nw, 'gender', att$gender)
-## or: 
+#alternative code: 
 nw %v% 'gender' = att$gender
 ```
 
