--- a/book.bib
+++ b/book.bib
@@ -64,4 +64,25 @@ volume = {14},
 year = {2017}
 }
 
+@article{cranmer2011inferential,
+  title={Inferential network analysis with exponential random graph models},
+  author={Cranmer, Skyler J and Desmarais, Bruce A},
+  journal={Political Analysis},
+  volume={19},
+  number={1},
+  pages={66--86},
+  year={2011},
+  publisher={SPM-PMSAPSA}
+}
+
+@article{cranmer2017navigating,
+  title={Navigating the range of statistical tools for inferential network analysis},
+  author={Cranmer, Skyler J and Leifeld, Philip and McClurg, Scott D and Rolfe, Meredith},
+  journal={American Journal of Political Science},
+  year={2017},
+  volume = {61}, 
+  number = {1}, 
+  pages = {237--251},
+  publisher={Wiley Online Library}
+}
 
