--- a/Handout/Exercises/Exercises.tex
+++ b/Handout/Exercises/Exercises.tex
@@ -55,7 +55,7 @@
 
 \begin{enumerate}
 	\item Enter the network in Figure \ref{rdn} as an edge list in R.
-	\item Convert the edgelist to a matrix (using a loop; \textcolor{red}{Do not use the \texttt{igraph}-package}).
+	\item Convert the edgelist to a matrix.
 	\item Plot the network (with the arrows, i.e., directed).
 	\item Nodes $a$, $f$, $e$, $c$ are all `smokers', color these nodes blue. Create an attribute-file for your data and add a smoker-variable. Plot the network again. Make sure you include a legend.
 \end{enumerate}
