--- a/Handout/Exercises/Exercises.tex
+++ b/Handout/Exercises/Exercises.tex
@@ -62,20 +62,39 @@
 
 \subsection{Task 2}
 
-XXHELGA-DATA
+\begin{enumerate}
+	\item Read in the edgelist.
+	\item Create an attributes data frame. 
+	\item Transform the edgelist into an adjacency matrix.
+	\item Create a network object and add at least one attribut to the object.
+	\item Plot the network and color nodes with an attribute.
+	\item Additional: Size nodes with their indegree-centrality (see help-file for ggnet2).
+\end{enumerate}
 
 % 
+\clearpage
 \newpage
 \section{Assignment 2 - Calculating Centrality Scores}
 
-XXHELGA-DATA
+\begin{enumerate}
+	\item Using Helga's sports data, set everything up
+	\item Compute undirected and directed degree centrality.
+	\item Compute closeness and betweenness centrality.
+	\item Check for a correlation between a centrality score and an attribute of your choice.
+	\item Plot the network again and size the nodes by their betweenness centrality. Interprete the graph.
+\end{enumerate}
 
 %
-\newpage
 \section{Assignment 3 - Running a Network Autocorrelation Model}
 
-
-XXHELGA-DATA
+\begin{enumerate}
+	\item Prepare Helga's data.
+	\item Compute centrality scores.
+	\item Compute network autocorrelation terms of your choice (think about your theory first! What do you want to explain?)
+	\item Run a simple OLS regression and control for network terms. 
+	\item Interpret the results.
+	\item Bonus: add an interaction effect and interpret the results.
+\end{enumerate}
 
 
 
